k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdlc-service
spec:
  selector:
    app: sdlc-pod
  ports:
    - name: vscode
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: syson
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: penpot
      protocol: TCP
      port: 8082
      targetPort: 8082
    - name: opencode
      protocol: TCP
      port: 8083
      targetPort: 8083
  type: NodePort
